# lifegen

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: copilot-instructions.md
.github/instructions/: ecs-patterns.instructions.md  module-structure.instructions.md  spec-fidelity.instructions.md  test-coverage.instructions.md
.github/workflows/: ci.yml
spec/: alife_spec_v2.md
src/: components.rs  constants.rs  main.rs  resources.rs
src/systems/: _test_scaffold.rs  mod.rs
